2022-02-14  Yusuke Suzuki  <ysuzuki@apple.com>

        `Array#{ groupBy, groupByToMap }` should throw a `TypeError` when `this` is `null` or `undefined`
        https://bugs.webkit.org/show_bug.cgi?id=236541

        Reviewed by Alexey Shvayka.

        * stress/array-group-by-null-or-undefined.js: Added.
        (shouldThrow):

2022-02-09  Angelos Oikonomopoulos  <angelos@igalia.com>

        Skip failing shadow realms tests on MIPS
        https://bugs.webkit.org/show_bug.cgi?id=236361

        Unreviewed gardening.

        * stress/shadow-realm-evaluate.js:
        * stress/shadow-realm-import-value.js:

2022-02-08  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] YarrJIT inlining should be disabled when we have DotStarEnclosure
        https://bugs.webkit.org/show_bug.cgi?id=236332
        rdar://88483574

        Reviewed by Michael Saboff.

        * stress/yarr-inlining-dot-star-enclosure.js: Added.
        (test):

2022-02-08  Caitlin Potter  <caitp@igalia.com>

        [JSC] move function wrapping logic to a new Function type
        https://bugs.webkit.org/show_bug.cgi?id=235382

        Reviewed by Yusuke Suzuki.

        Adds a new file testing CopyNameAndLength stuff in the ShadowRealm proposal,
        and fix up assertions about this in shadow-realm-evaluate.js

        * stress/shadow-realm-evaluate.js:
        * stress/shadow-realm-remote-function-copy-length-and-name.js: Added.

2022-02-06  Yusuke Suzuki  <ysuzuki@apple.com>

        [Wasm] ref.null check should be done first in B3 call_ref
        https://bugs.webkit.org/show_bug.cgi?id=236206

        Reviewed by Mark Lam.

        * wasm.yaml:
        * wasm/function-references-spec-tests/call-null-ref.wast.js: Added.

2022-02-06  Alexey Shvayka  <ashvayka@apple.com>

        Object literal doesn't properly resolve name clash between an accessor and a constant property
        https://bugs.webkit.org/show_bug.cgi?id=220574

        Reviewed by Yusuke Suzuki.
